--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-
+ <link rel="stylesheet" type="text/css" href="style.css">
   <div class="container">
   <?xml version="1.0" encoding="UTF-8"?>
   <svg class="page404" viewBox="0 0 5059 4833" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
