--- a/404.html
+++ b/404.html
@@ -1,5 +1,9 @@
- <link rel="stylesheet" type="text/css" href="style.css">
-  <div class="container">
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>  
+<body>
+<div class="container">
   <?xml version="1.0" encoding="UTF-8"?>
   <svg class="page404" viewBox="0 0 5059 4833" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -17,3 +21,5 @@
       </g>
   </svg>
 </div>
+</body>
+</html>
